--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,14 +3,20 @@
 unbind					C-b
 set -g					prefix C-a
 set -sg                 escape-time 0
+
 # = Monitor activity on background windows.
 setw -g					monitor-activity on
+
 # = Set current window color to something neutral (8,11,18,23,...).
 #set-window-option -g	window-status-current-bg "colour8"
 set-window-option -g	window-status-current-attr bold
 # = Set clock mode options
 set-window-option -g	clock-mode-style 24
 set-window-option -g	clock-mode-colour white
+
+# Set default shell to zsh
+set-option -g default-shell /usr/bin/zsh
+
 # = Set window scrollback history limit.
 set -g					history-limit 100000
 # = Enable status bar.
@@ -25,12 +31,13 @@ set -g					status-right-length 50
 # . Set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default]'
 set -g					status-right '#[fg=red]#(acpi -b | awk '"'{ print $4 $5 }'"')#[default]   #[fg=blue]#(date +"%D %R")#[default]'
 # = Set correct terminal info.
-set -g					default-terminal "screen-256color"
+set -g					default-terminal "xterm"
 
 # > Keybinding modifications.
 # = Set default keybindings to vi.
 set -g			status-keys vi
 set -g			mode-keys vi
+
 # = Buffers and copy-mode keybindings (Esc: change mode, v: visual selection, y: yank text, q: quit copy mode, p: print buffer).
 bind			Escape copy-mode
 bind-key -t		vi-copy 'v' begin-selection
@@ -46,11 +53,11 @@ bind-key		h select-pane -L
 bind-key		l select-pane -R
 # = Bind Reload key.
 bind			r source-file ~/.tmux.conf
+
 # = Rebind last-wi:dow to Ctrl-a.
-unbind			l
 bind-key		C-a last-window
+
 # > Most default->modified keybindings for posterity's sake.
-# = Various.
 bind-key		? list-keys
 bind-key		: command-prompt
 bind-key		i display-message
